--- a/build.gradle
+++ b/build.gradle
@@ -33,13 +33,15 @@ dependencies {
     Since these are `implementation` dependencies, they are packed in the final jar.
     Read the documentation at https://docs.gradle.org/current/userguide/declaring_dependencies.html to learn more
      */
-    //implementation 'org.apache.logging.log4j:log4j-api:2.+'
-    //implementation 'org.apache.logging.log4j:log4j-core:2.+'
+    implementation 'org.apache.logging.log4j:log4j-api:2.+'
+    implementation 'org.apache.logging.log4j:log4j-core:2.+'
 
     /*
     This is another example - it imports the javafx-controls dependency
      */
     implementation 'org.openjfx:javafx-controls:19.0.2.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     // JUNIT
     /*
