--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .idea/
 .gradle/
 build/
+bin/
 # Default ignored files
 /shelf/
 /workspace.xml
 # Editor-based HTTP Client requests
 /httpRequests/
-# Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
