--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
     // reflections for zero configuration classpath analysis
     implementation 'org.reflections:reflections:0.10.2'
+
+    implementation 'ch.qos.logback:logback-classic:1.4.6'
     
     // JUnit dependencies for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
