--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation("org.junit.jupiter:junit-jupiter:5.+")
 
+    //
+    testImplementation 'org.mockito:mockito-core:5.10.0'
+
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
