--- a/build.gradle
+++ b/build.gradle
@@ -25,22 +25,26 @@ repositories {
     mavenCentral()
 }
 
-// JavaFX-configuration
+// JavaFX configuration
 javafx {
     version = "19.0.2.1"
     modules = [
             'javafx.controls',
             'javafx.fxml',
             'javafx.base',
-            'javafx.graphics'
+            'javafx.graphics',
+            'javafx.media'
     ]
 }
+
+
 
 // dependencies
 dependencies {
     // JavaFX
     implementation 'org.openjfx:javafx-controls:19.0.2.1'
     implementation 'org.openjfx:javafx-fxml:19.0.2.1'
+    implementation 'org.openjfx:javafx-media:19.0.2.1'
 
     // Physik-Engine
     implementation 'org.dyn4j:dyn4j:5.0.2'
